--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
 <http>
   <head> <title>  login page  </title> </head>
-  <body> <h4> this is the login page </h4> </body>
+  <body bgcolor="red" <h4> this is the login page </h4> /body>
 </http>
